bug fixes with z-index

--- a/frontend/src/components/Navigation/BuyDropDown.css
+++ b/frontend/src/components/Navigation/BuyDropDown.css
@@ -10,7 +10,7 @@
     padding: 36px;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
-    z-index: 2;
+    z-index: 7;
 }
 
 #buy-dropdown.dropdown-subnav {
