--- a/frontend/src/components/Navigation/ProfileDropDown.css
+++ b/frontend/src/components/Navigation/ProfileDropDown.css
@@ -8,7 +8,7 @@
     height: 326px;
     right: 25px;
     top: 63px;
-    z-index: 2;
+    z-index: 7;
 }
 
 #profile-dropdown-content {
